// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormSubmission > does not render cancel button when cancel text and cancel action are not provided 1`] = `
<div>
  <div
    class="grid gap-2 mt-3"
  >
    <button
      class="font-medium transition-colors duration-200 ease-in-out min-h-[44px] flex items-center justify-center gap-2 bg-[var(--color-primary)] text-white hover:bg-[var(--color-primary-hover)] active:opacity-90 h-10 px-4 text-sm rounded-lg w-full cursor-pointer"
      type="submit"
    >
      foo
    </button>
  </div>
</div>
`;

exports[`FormSubmission > renders the submit and cancel 1`] = `
<div>
  <div
    class="grid gap-2 mt-3"
  >
    <button
      class="font-medium transition-colors duration-200 ease-in-out min-h-[44px] flex items-center justify-center gap-2 bg-[var(--color-primary)] text-white hover:bg-[var(--color-primary-hover)] active:opacity-90 h-10 px-4 text-sm rounded-lg w-full cursor-pointer"
      type="submit"
    >
      foo
    </button>
    <button
      class="font-medium transition-colors duration-200 ease-in-out min-h-[44px] flex items-center justify-center gap-2 text-[var(--color-text-secondary)] hover:bg-[var(--color-surface-overlay)] active:bg-[var(--color-surface-raised)] h-10 px-4 text-sm rounded-lg w-full cursor-pointer"
      type="button"
    >
      bar
    </button>
  </div>
</div>
`;
